[tool.poetry]
name = "pie"
version = "0.1.0"
description = ""
authors = ["NickSheva <nikolayshevtsov@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.8.2"
pandas = "^2.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
